--- a/src/app/(pages)/products/index.module.scss
+++ b/src/app/(pages)/products/index.module.scss
@@ -1,3 +1,11 @@
+/**
+ * Products Page Layout
+ * Features:
+ * - Two-column grid layout
+ * - Responsive design
+ * - Filter sidebar integration
+ * - Product grid display
+ */
 @import '../../_css/common';
 
 .container {
