--- a/src/app/_components/Categories/index.module.scss
+++ b/src/app/_components/Categories/index.module.scss
@@ -1,3 +1,10 @@
+/**
+ * Categories Component Styles
+ * Defines:
+ * - Grid layout for category items
+ * - Responsive adjustments
+ * - Title and list styling
+ */
 @use '../../_css/queries.scss' as *;
 
 .container {
