--- a/src/app/(pages)/login/LoginForm/index.module.scss
+++ b/src/app/(pages)/login/LoginForm/index.module.scss
@@ -1,3 +1,12 @@
+/**
+ * Login Form Component Styles
+ * Includes:
+ * - Form layout and spacing
+ * - Input field styling
+ * - Button styling
+ * - Error message handling
+ * - Responsive adjustments 
+ */
 @import "../../../_css/common";
 
 .form {
